--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buyuk Ardahan Apart Oteli | HOŞ GELDİNİZ</title>
+    <title>Buyuk Ardahan Apart Oteli | HOs GELDİNİZ</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,12 +16,123 @@
             </div>
             <nav class="navbar">
                 <li><a href="index.html">Ana Sayfa</a></li>
-                <li><a href="#">Fotoğraflar</a></li>
-                <li><a href="#">İletişim</a></li>
+                <li><a href="#">Fotograflar</a></li>
+                <li><a href="#">İletisim</a></li>
             </nav>
         </div>
         <h1><span>BÜYÜK</span>ARDAHAN<span>APART HOTEL</span></h1>
-        <a href="tel:05055419322"><button class="btn-reservation"><img src="images/reservation.png" alt="reservation icon"><span>RESERVASYON</span></button></a>
+        <a href="tel:05512130004"><button class="btn-reservation"><img src="images/reservation.png" alt="reservation icon"><span>RESERVASYON</span></button></a>
     </header>
+
+    <h2 class="mainText">BÜYÜK ARDAHAN APART HOTEL</h2>
+    <section class="secrooms">
+        <div class="info">
+            <h3 class="title">LUKS ODALAR</h3>
+            <p class="subtext">
+                Odalarimiz sizlerin rahatligi için tasarlanmis olup
+                rahatlikla konaklayabileceginiz sekilde dizayn 
+                edilmistir.
+            </p>
+            <a href="tel:05512130004"><button class="btn-reservation">REZERVASYON</button></a>
+        </div>
+        <div class="photo">
+            <img src="./images/homeimg1.png" alt="Room Photo">
+        </div>
+    </section>
+
+    <section class="seclocation">
+        <div class="info">
+            <h3 class="title">MUKEMMEL KONUM</h3>
+            <p class="subtext">
+                Her türlü ihtiyacinizi karsilayabilecek ve
+                park sorunu yasamaycaksiniz. Apartimizin
+                etrafinda market, büfe ve daha fazla tesis 
+                bulunmaktadir.
+            </p>
+            <a href="tel:05512130004"><button class="btn-reservation">REZERVASYON</button></a>
+        </div>
+        <div class="photo">
+            <img src="./images/homeimg2.png" alt="Room Photo">
+        </div>
+    </section>
+
+    <section class="infoSection">
+        <p class="infoText">
+            &emsp;Sehir merkezinde MİGROS karşisinda  bulunan otel konum olarak Ardahan’in merkezinde bulunmaktadir.
+Otogar’a 5 dk Havaalani‘na 70 dk mesafededir.
+Otelimiz turizm Bakanligina Bağli 3 yildizli bir otelimiz 5 suit 10 single ve 25 double Toplam 40 odasi bulunmaktadir.
+Otelimizin 100 kisilik kahvalti ve Yemek Salonu ile 300 kisilik Toplanti ve kokteyl Salonu bulunmaktadir.
+Otelimizin one cikan ozelligi koridorlarin odalarin ve banyolarin oldukca ferah olmasi ile bunun yaninda otelin tum odalarinin pencerelerinin Güneş gormesidir. Otelimiz oda kahvalti seklinde hizmet vermektedir.
+Musterilerimize Oto park hizmetinin yaninda talep olursa havaalani servisi de verilmektedir.
+Tum odalarimiz 24 saat sicak Su hizmetide verilmektedir, Tesiste verilen Oda Kahvalti konaklamalar, çikiş günü sabah kahvaltisi ile son bulur.
+Elverişli konumuyla misafirlerine şehrin önemli iş, alişveriş, ticaret ve resmi kuruluşlarina ulaşim açisindan avantaj sağlayan Hotel, Şehir merkezine  yalnizca 1 km mesafede konforlu bir konaklama imkani sunuyor.
+Misafirlerimizi konaklatirken fiyat kalite dengesine onem verilmistir.
+Siz degerli misafirlerimizi agirlamaktan memnuniyet duyariz.
+<br>
+Anatolia Hot
+        </p>
+    </section>
+
+    <div class="sec seclobi">
+        <div class="label">
+            LOBI
+        </div>
+        <p class="note">
+            Anatolia Oteline hoşgeldiniz lobimiz otelimizin sicak atmosferinin simgesidir. İşleriniz yapilirken dinlenebileceğiniz bir ortam sunmaktadir. 
+        </p>
+    </div>
+    <div class="sec seclobi">
+        <div class="label">
+            RESTAURANT
+        </div>
+        <p class="note">
+            Açik Büfe ile kahvaltimizda günlük yapilan ekmek poğaça simit çeşitlerimizin yaninda zengin seçenekler sizleri bekliyor.
+        </p>
+    </div>
+    <div class="sec seclobi">
+        <div class="label">
+            ODA
+        </div>
+        <p class="note">
+            Odalarimzda minibar ,tv kasa ve saç kurutma makineleri mevcuttur.
+        </p>
+    </div>
+    <div class="sec seclobi">
+        <div class="label">
+            SALON
+        </div>
+        <p class="note">
+            Nişan,Düğün Sünnet,Mezuniyet törenlerinde Kokteyl,ziyafet açik büfe davetletlerinizide misafirleriniz zevkle ağirlayacağimiz bir ortam ve enson yeniliklerle donatilmiş bir konferenas salonu olarakta slayt, tepegöz ve müzik sistemleriyle hizmetinizdedir.
+        </p>
+    </div>
+    <div class="sec seclobi">
+        <div class="label">
+            DIGER HIZMETLER
+        </div>
+        <p class="note">
+            Erken Check- in ve hizli ceheck-out  imkani, kuru temizleme, çamaşir servisi, uyandirma servisi, bagaj odasi,çocuk odasi, açik otopark, döviz bozdurma, ücretisiz kablosuz internet.
+        </p>
+    </div>
+
+    <h3 class="placetovisit">GEZILECEK YERLER</h3>
+    <ul>
+        <li><img src="./images/star.png" alt="star">Ardahan Kalesi 2 km</li>
+        <li><img src="./images/star.png" alt="star">Çildir Gölü 42 km</li>
+        <li><img src="./images/star.png" alt="star">Şeytan Kalesi 44 km</li>
+        <li><img src="./images/star.png" alt="star">Şavşat Yaylasi 30 km</li>
+        <li><img src="./images/star.png" alt="star">Ani Harabeleri 90 km</li>
+        <li><img src="./images/star.png" alt="star">Kazan Kalesi 7 km</li>
+        <li><img src="./images/star.png" alt="star">Kayak Merkezi 12 km</li>
+    </ul>
+
+    <div class="footerhead">
+        <h3>BÜYÜK ARDAHAN APART OTEL</h3>
+        <h4>"Ardahanda ki eviniz"</h4>
+        <p>Ardahan</p>
+    </div>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
