--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buyuk Ardahan Apart Oteli | HOs GELDİNİZ</title>
+    <title>Buyuk Ardahan Apart Oteli | HOS GELDİNİZ</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,7 +21,7 @@
             </nav>
         </div>
         <h1><span>BÜYÜK</span>ARDAHAN<span>APART HOTEL</span></h1>
-        <a href="tel:05512130004"><button class="btn-reservation"><img src="images/reservation.png" alt="reservation icon"><span>RESERVASYON</span></button></a>
+        <a href="tel:05512130004"><button class="btn-reservation"><img src="images/reservation.png" alt="reservation icon"><span>REZERVASYON</span></button></a>
     </header>
 
     <h2 class="mainText">BÜYÜK ARDAHAN APART HOTEL</h2>
@@ -132,7 +132,39 @@ Anatolia Hot
     </div>
 
     <footer>
-
+        <div class="col1">
+            <div class="logo">
+                <h4>BÜYÜK ARDAHAN</h4>
+                <p>APART HOTEL</p>
+            </div>
+            <div class="address">
+                <p>
+                    ARDAHAN<br>
+                    +90 552 213 00 04<br>
+                    berksysl.g@gmail.com
+                </p>
+            </div>
+        </div>
+        <div class="col2">
+            <ul class="list">
+                <li><a href="#">ANA SAYFA</a></li>
+                <li><a href="#">FOTOGRAFLAR</a></li>
+                <li><a href="#">İLETİŞİM</a></li>
+            </ul>
+        </div>
+        <div class="col3">
+            <ul class="list">
+                <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100077547638036"><img src="./images/facebook.png" alt="facebook icon">facebook</a></li>
+                <li><a target="_blank" href="https://www.instagram.com/buyukardahanhotel/"><img src="./images/instagram.png" alt="instagram icon">instagram</a></li>
+            </ul>
+        </div>
+        <div class="col4">
+            <form>
+                ILETISIM<br>
+                <input type="text" placeholder="MESAJ">
+                <input type="submit">
+            </form>
+        </div>
     </footer>
 </body>
 </html>
